# NexusAI

./: .gitignore  LICENSE  README.md  env.example  install_nexusai_user.sh  nexusai  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
benchmarks/: performance_benchmarks.py
config/: config.yaml
docker/: Dockerfile
docs/: ADVANCED_USAGE_EXAMPLES.md  API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_DETAILED.md  CHANGELOG.md  DEVELOPMENT_GUIDE.md  USER_GUIDE.md
docs/api/: README.md
docs/datasets/: DATASET_GUIDE.md
docs/guides/: ADVANCED_THREAT_INTEL.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  README.md
scripts/: train_high_accuracy_no_xgb.py  train_with_sample_data.py
scripts/database/: init_database.py  simple_db_init.py
scripts/training/: create_sample_model.py  train_enhanced_ai.py
src/nexus/: __init__.py  __main__.py
src/nexus/ai/: __init__.py  advanced_threat_intel.py  ai_optimizer.py  deepseek_integration.py  exploit_config.py  exploit_database.py  exploit_database_enhanced.py  exploit_developer.py  exploit_fetcher.py  exploit_generators.py  exploit_guide_generator.py  mitre_attack.py  network_infrastructure.py  real_time_learning.py  threat_feeds.py  vuln_cve_fetcher.py
src/nexus/cli/: __init__.py  cli.py  commands.py  parser.py  predictor.py  vuln_info.py
src/nexus/core/: __init__.py  config.py  http_client.py  main.py  preprocessing.py  setup.py
src/nexus/monitoring/: __init__.py  health_check.py
src/nexus/optimization/: __init__.py  cache_manager.py
src/nexus/security/: __init__.py  security_validator_enhanced.py
src/nexus/web/: app.py
src/nexus/web/templates/: error.html  index.html
